--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "angular-font-awesome": "^3.1.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
